--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ site/*
 .RData
 # User-specific files
 .Ruserdata
+.Rprofile
 # Example code in package build process
 *-Ex.R
 # Output files from R CMD build
